# ezScreenshots

./: Cargo.lock.orig  Cargo.toml  Cargo.toml.orig  README.md  index.html
assets/: sw.js
src/: app.rs  lib.rs  main.rs  utils.rs  utils.rs.orig
src/app/: mod.rs  mod.rs.orig
src/capture/: mod.rs
src/crop/: mod.rs
src/custom_widgets/: custom_button.rs  custom_container.rs  mod.rs
src/hotkeys/: hotkeys_logic.rs  mod.rs
src/image/: mod.rs
src/menu/: mod.rs
src/modals/: defaultpath_modal.rs  delay_modal.rs  hotkeys_modal.rs  mod.rs  save_as_modal.rs  save_as_modal.rs.orig  setdefaultpath_modal.rs  setpath_modal.rs  settings_modal.rs
src/resize/: mod.rs
src/save_as_modal/: mod.rs
src/settings_modal/: mod.rs
src/toast/: mod.rs  toast_logic.rs
