[package]
name = "ez_screenshots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
screenshots = "0.8.5"
iced = {version = "0.10.0", features = ["svg", "tokio", "image", "advanced", "debug", "canvas", "lazy"]}
tokio = { version = "1.34.0", features = ["time"] }
dark-light = "1.0.0"
tracing-subscriber = "0.3.18"
iced_native = "0.10.3"
iced_aw = { version = "0.7.0", default-features = false, features = [ "menu", "quad", "modal", "card", "selection_list", "spinner", "icons", "number_input", "floating_element" ] }
iced_graphics = "0.9.0"
image = { version = "0.24.7", features = ["png", "gif", "jpeg"] }
chrono = "0.4.31"
directories = "5.0.1"
serde_json = { version = "1.0.108", features = [] }
serde = { version = "1.0", features = ["derive"] }
arboard = "3.3.0"
anyhow = { version = "1.0", default-features = false }
gif = "0.12.0"
rfd = "0.12.1"
